--- a/agi_swisstopo_gebaeudeadressen/build.gradle
+++ b/agi_swisstopo_gebaeudeadressen/build.gradle
@@ -7,8 +7,8 @@ import de.undercouch.gradle.tasks.download.Download
 apply plugin: "de.undercouch.download"
 apply plugin: "ch.so.agi.gretl"
 
+defaultTasks 'transferToPub'
 //defaultTasks 'dbImport'
-defaultTasks 'dbImport'
 
 def pathToTempFolder = System.getProperty("java.io.tmpdir")
 def pathToUnzipFolder = Paths.get(pathToTempFolder, 'unzip_data')
@@ -48,9 +48,8 @@ task dbImport(type: Ili2pgImport, dependsOn: 'unzipData') {
     deleteData = true
     strokeArcs = true
 }
-/*
+
 task transferToPub(type: Db2Db, dependsOn: 'dbImport') {
-//task transferToPub(type: Db2Db) {
     description = "Transfer und Umbau der Daten von Edit nach Pub"
     sourceDb = [dbUriEdit, dbUserEdit, dbPwdEdit]
     targetDb = [dbUriPub, dbUserPub, dbPwdPub]
@@ -60,4 +59,4 @@ task transferToPub(type: Db2Db, dependsOn: 'dbImport') {
     fetchSize = 1000
     batchSize = 1000
 }
-*/
+
