--- a/afu_infoflora_pub/build.gradle
+++ b/afu_infoflora_pub/build.gradle
@@ -3,7 +3,7 @@ import ch.so.agi.gretl.api.TransferSet
 
 apply plugin: 'ch.so.agi.gretl'
 
-defaultTasks 'transferAfuInfofloraPub'
+defaultTasks 'transferAlwInfofloraPub'
 
 task transferAlwInfofloraPub(type: Db2Db){
     sourceDb = [dbUriEdit, dbUserEdit, dbPwdEdit]
