[processing_db] Different solution for setting DB hostname in production environments

--- a/processing_db/Jenkinsfile
+++ b/processing_db/Jenkinsfile
@@ -16,6 +16,9 @@ pipeline {
           spec:
             containers:
             - name: jnlp
+              env:
+              - name: ORG_GRADLE_PROJECT_processingDbHostname
+                value: localhost
               envFrom:
               - configMapRef:
                   name: gretl-resources
