--- a/processing_db/Jenkinsfile
+++ b/processing_db/Jenkinsfile
@@ -14,6 +14,8 @@ pipeline {
         defaultContainer 'jnlp'
         yaml '''
           spec:
+            securityContext:
+              supplementalGroups: [26]
             containers:
             - name: jnlp
               env:
