Use IP address instead of host name
This way it matches the corresponding entry in the default pg_hba.conf

--- a/processing_db/Jenkinsfile
+++ b/processing_db/Jenkinsfile
@@ -19,8 +19,8 @@ pipeline {
             containers:
             - name: jnlp
               env:
-              - name: ORG_GRADLE_PROJECT_processingDbHostname
-                value: localhost
+              - name: ORG_GRADLE_PROJECT_processingDbHost
+                value: 127.0.0.1
               envFrom:
               - configMapRef:
                   name: gretl-resources
