--- a/processing_db/build.gradle
+++ b/processing_db/build.gradle
@@ -4,7 +4,9 @@ import ch.so.agi.gretl.api.TransferSet
 apply plugin: 'ch.so.agi.gretl'
 
 
-def dbHost = project.hasProperty('processingDbHost') ?: 'processing-db'
+// Set the dbHost valiable to the value of the processingDbHost property if it's set,
+// otherwise use the default value (which is 'processing-db')
+def dbHost = project.hasProperty('processingDbHost') ? processingDbHost : 'processing-db'
 def dbUriProcessing = "jdbc:postgresql://${dbHost}/processing"
 def dbUserProcessing = 'admin'
 def dbPwdProcessing = 'admin'
