[afu_igel_pub] add gelan_pid_standort_count

--- a/afu_igel/build.gradle
+++ b/afu_igel/build.gradle
@@ -3,7 +3,7 @@ import ch.so.agi.gretl.api.TransferSet
 import java.nio.file.Paths
 import de.undercouch.gradle.tasks.download.Download
 
-defaultTasks "refreshSolr"
+defaultTasks "transformAndPub"
 
 def pathToTempFolder = System.getProperty("java.io.tmpdir")
 def igelTypes = ["standort", "stall"]
@@ -45,12 +45,13 @@ task transformAndPub(type: Db2Db, dependsOn: dbImport){
     sourceDb = [dbUriEdit, dbUserEdit, dbPwdEdit]
     targetDb = [dbUriPub, dbUserPub, dbPwdPub]
     transferSets = [
-            new TransferSet('stall.sql', 'afu_igel_pub.igel_stall', true),
-            new TransferSet('standort.sql', 'afu_igel_pub.igel_standort', true)
+            new TransferSet('stall.sql', 'afu_igel_pub_v1.igel_stall', true),
+            new TransferSet('standort.sql', 'afu_igel_pub_v1.igel_standort', true)
     ];
 }
 
-
+/*
 task refreshSolr(type:Exec, dependsOn:'transformAndPub') {
 	commandLine 'curl', '-i', '--max-time', '10', solrIndexupdaterBaseUrl + '/queue?ds=ch.so.afu.gewaesserschutz_lw.stall,ch.so.afu.gewaesserschutz_lw.standort'
 }
+*/
