--- a/amb_sirenenplanung_pub/build.gradle
+++ b/amb_sirenenplanung_pub/build.gradle
@@ -3,13 +3,12 @@ import ch.so.agi.gretl.api.TransferSet
 
 apply plugin: 'ch.so.agi.gretl'
 
-defaultTasks 'transferAmbSirenenplanung'
+defaultTasks 'transferAmbSirenenplanungPub'
 
-task transferAmbSirenenplanung(type: Db2Db){
-    sourceDb = [dbUriSogis, dbUserSogis, dbPwdSogis]
+task transferAmbSirenenplanungPub(type: Db2Db) {
+    sourceDb = [dbUriEdit, dbUserEdit, dbPwdEdit]
     targetDb = [dbUriPub, dbUserPub, dbPwdPub]
     transferSets = [
-            new TransferSet('amb_sirenenplanung_pub_sirenen.sql', 'amb_sirenenplanung_pub.sirenen',
-                    true)
+            new TransferSet('amb_sirenenplanung_pub.sql', 'amb_sirenenplanung_pub_v1.sirene', true)
     ];
 }
