--- a/alw_fruchtfolgeflaechen/Jenkinsfile
+++ b/alw_fruchtfolgeflaechen/Jenkinsfile
@@ -63,7 +63,7 @@ pipeline {
             steps {
                 git url: gretlJobRepoUrl, branch: "${params.BRANCH ?: 'master'}", changelog: false
                 dir(env.JOB_BASE_NAME) {
-                    sh 'gretl -Dorg.gradle.jvmargs=-Xmx2G importBodenbedeckung, importGemeindegrenzen, importAltlasten, importGewaesserschutz, importKlimaeignung, importAuen2, importFlachmoore, importHochmoore, importTww2, importVogelreservate, importSchadstoffbelasteteBoeden, importNutzungsplanung, importNaturreservate, importNaturschutzobjekte, importMJPNatur, importIsBoden, importGewaesserraum, importUebersteuerung, makeSchemaFFF, importHoheitsgrenzen, importFFF_alt'
+                    sh 'gretl -Dorg.gradle.jvmargs=-Xmx2G prepare_db importAll'
                     sh 'gretl -Dorg.gradle.jvmargs=-Xmx2G fff_all_together'
                     waitUntil {
                         sh 'gretl -Dorg.gradle.jvmargs=-Xmx2G fff_to_edit_db'
