[alw_fruchtfolgeflaechen]Vogelreservate deaktiviert, Gewässerraum integriert

--- a/alw_fruchtfolgeflaechen/01_Datenimport/build.gradle
+++ b/alw_fruchtfolgeflaechen/01_Datenimport/build.gradle
@@ -731,7 +731,7 @@ task importAll() {
         'importFlachmoore',
         'importHochmoore',
         'importTww2',
-        'importVogelreservate',
+        //'importVogelreservate',
         'importSchadstoffbelasteteBoeden',
         'importNutzungsplanung',
         'importNaturreservate',
