--- a/awjf_wegsanierungen_pub/build.gradle
+++ b/awjf_wegsanierungen_pub/build.gradle
@@ -6,7 +6,7 @@ apply plugin: 'ch.so.agi.gretl'
 defaultTasks 'transferAwjfWegsanierungen'
 
 task transferAwjfWegsanierungen(type: Db2Db){
-    sourceDb = [dbUriSogis, dbUserSogis, dbPwdSogis]
+    sourceDb = [dbUriEdit, dbUserEdit, dbPwdEdit]
     targetDb = [dbUriPub, dbUserPub, dbPwdPub]
     transferSets = [
             new TransferSet('awjf_wegsanierungen_pub_wegsanierungen_wegsanierung.sql',
