[alw_fruchtfolgeflaechen] fff werden nicht mehr in die pub-db exportiert. Neue Jobs für pub und CSV-Export

--- a/alw_fruchtfolgeflaechen/04_Finish/build.gradle
+++ b/alw_fruchtfolgeflaechen/04_Finish/build.gradle
@@ -3,7 +3,7 @@ import ch.so.agi.gretl.api.*
 
 apply plugin: 'ch.so.agi.gretl'
 
-defaultTasks 'fff_to_pub_db'
+defaultTasks 'fff_to_edit_db_finish'
 
 //HIER werden den Flächen innerhalb des Gewässerraumes noch das Spezialattribut "Gewaesserraum" zugeordnet. 
 
@@ -34,16 +34,5 @@ task fff_to_edit_db_finish(type: Db2Db, dependsOn: fff_komplett_gemeinden){
     targetDb = [dbUriEdit, dbUserEdit, dbPwdEdit]
     transferSets = [
             new TransferSet('fff_to_edit_db_finish.sql','alw_fruchtfolgeflaechen_v1.fruchtfolgeflaeche', true)
-    ];        
-}
-
-//HIER WERDEN DIE Berechneten Daten in die Pub-DB geschrieben
-
-
-task fff_to_pub_db(type: Db2Db, dependsOn: fff_to_edit_db_finish){
-    sourceDb = [dbUriProcessing, dbUserProcessing, dbPwdProcessing]
-    targetDb = [dbUriPub, dbUserPub, dbPwdPub]
-    transferSets = [
-            new TransferSet('fff_to_pub_db.sql','alw_fruchtfolgeflaechen_pub_v1.fruchtfolgeflaeche', true)
     ];        
 }
