--- a/alw_fruchtfolgeflaechen/Jenkinsfile
+++ b/alw_fruchtfolgeflaechen/Jenkinsfile
@@ -76,7 +76,7 @@ pipeline {
                         sh 'gretl -Dorg.gradle.jvmargs=-Xmx2G fff_to_edit_db'
                         input message: 'Resultat publizieren oder Berechnung nochmals durchführen?', parameters: [booleanParam(name: 'PUBLISH_RESULT', defaultValue: false, description: 'Häkchen setzen, um das Resultat zu publizieren und den Job abzuschliessen')]
                     }
-                    sh 'gretl -Dorg.gradle.jvmargs=-Xmx2G fff_to_pub_db'
+                    sh 'gretl -Dorg.gradle.jvmargs=-Xmx2G fff_to_edit_db_finish'
                 }
             }
         }
