--- a/arp_npl_import/Jenkinsfile
+++ b/arp_npl_import/Jenkinsfile
@@ -25,6 +25,9 @@ node('master') {
 // Declarative pipeline starts here
 pipeline {
     agent { label params.nodeLabel ?: 'gretl' }
+    options {
+        timeout(time: 6, unit: 'HOURS')
+    }
     stages {
         stage('Run GRETL-Job') {
             steps {
