--- a/avt_ausnahmetransportrouten_export_ai/Jenkinsfile
+++ b/avt_ausnahmetransportrouten_export_ai/Jenkinsfile
@@ -19,6 +19,9 @@ node('master') {
 // Declarative pipeline starts here
 pipeline {
     agent { label params.nodeLabel ?: 'gretl' }
+    options {
+        timeout(time: 6, unit: 'HOURS')
+    }
     stages {
         stage('Run GRETL-Job') {
             steps {
