--- a/awjf_wald_pub/build.gradle
+++ b/awjf_wald_pub/build.gradle
@@ -20,16 +20,7 @@ task transferAwjf(type: Db2Db){
             new TransferSet('awjf_wald_pub_schutzwald_massnahmenplanung.sql',
                     'awjf_wald_pub.schutzwald_massnahmenplanung', true),
             new TransferSet('awjf_wald_pub_sw_pdf.sql', 'awjf_wald_pub.sw_pdf', true),
-            new TransferSet('awjf_wald_pub_wap_bst_bkt.sql', 'awjf_wald_pub.wap_bst_bkt', true),
-            new TransferSet('awjf_wald_pub_silvaprotecteinteilig_sturz_kor.sql',
-                    'awjf_wald_pub.silvaprotecteinteilig_sturz_kor', true),
-            new TransferSet('awjf_wald_pub_silvaprotecteinteilig_lawine_kor.sql',
-                    'awjf_wald_pub.silvaprotecteinteilig_lawine_kor', true),
-            new TransferSet('awjf_wald_pub_silvaprotecteinteilig_rutsch_kor.sql',
-                    'awjf_wald_pub.silvaprotecteinteilig_rutsch_kor', true),
-            new TransferSet('awjf_wald_pub_silvaprotecteinteilig_grs_kor.sql',
-                    'awjf_wald_pub.silvaprotecteinteilig_grs_kor', true),
-            new TransferSet('awjf_wald_pub_sw_info.sql', 'awjf_wald_pub.sw_info', true)
+            new TransferSet('awjf_wald_pub_wap_bst_bkt.sql', 'awjf_wald_pub.wap_bst_bkt', true)
     ];        
 }
 
